Added some changes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello. This works!
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>My GiHub Site</title>
+        <link rel="icon" href="favicon.png" type="image/png" />
+        <link rel="stylesheet" href="style.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div class="container">
+            <h1>My GitHub Site</h1>
+            <p>This is my GitHub site. I'm learning how to use Git and GitHub.</p>
+            <p>Check out my GitHub profile: <a href="https://github.com/maiznadeem">MaizNadeem</a></p>
+        </div>
+    </body>
+</html>
