--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My GiHub Site</title>
+        <title>My GiHub Site!</title>
         <link rel="icon" href="favicon.png" type="image/png" />
         <link rel="stylesheet" href="style.css" />
         <link
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>My GitHub Site</h1>
+            <h1>My GitHub Site!</h1>
             <p>This is my GitHub site. I'm learning how to use Git and GitHub.</p>
             <p>Check out my GitHub profile: <a href="https://github.com/maiznadeem">MaizNadeem</a></p>
         </div>
